JogosFase3/k8s/jogos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jogos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jogos-api
  template:
    metadata:
      labels:
        app: jogos-api
    spec:
      containers:
        - name: jogos-api
          image: fase3jogosacr.azurecr.io/fase3-jogos-img:latest
          ports:
            - containerPort: 8080
            
            
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
