JogosFase3/k8s/jogos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jogos-service
spec:
  selector:
    app: jogos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
